tests/type/errors/bad_underscore.typedsol
4:3 error: Mismatched types for assignment
